style/style.css
@import url(fonts.css);

html, body {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  background-color: beige;
}
* {
  box-sizing: inherit;
}
html {
  box-sizing: border-box;
}
body {
  display: flex;
  flex-flow: column;
}
main {
  overflow-y: scroll;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}
#popup {
  position: fixed;
  z-index: 200;
  left: 0;
  right: 0;
  bottom: 0;
  max-height: calc(100% - 10ex);
  background-color: ivory;
  padding: 0.5rem;
}
#popup article {
  overflow: auto;
}
main.popup-visible {
  -webkit-filter: blur(4px);
  filter: blur(4px);
}
#popup:not(.top-most) {
  -webkit-filter: blur(2px);
  filter: blur(2px);
}
#popup .screenshot {
  display: none;
}
#popup #close {
  visibility: hidden;
}
#popup #close::before {
  visibility: visible;
  content: 'V';
  font-family: Raleway, sans-serif;
  font-size: 2rem;
  line-height: 2rem;
  color: white;
  background-color: darkCyan;
  width: 2rem;
  height: 2rem;
  border-radius: 1rem;
  border: 1px solid darkCyan;
  position: absolute;
  left: calc(50% - 2rem);
  top: -1rem;
  cursor: pointer;
}
#popup, #popup #close::before {
  box-shadow: 0 0 3px 2px darkGray;
}
#popup::after {
  content: '';
  display: block;
  clear: both;
}

main article {
  padding: 0.5em;
  margin: 0.5rem;
  box-shadow: 1px 1px 1px lightgray;
}
main article .story, main article .technologies {
  display: none;
}

ul.names, ul.names li {
  list-style: none;
}
ul.names {
  display: inline;
  padding: 0;
  margin: 0 0 1ex 0;
}
ul.names li {
  display: inline-block;
  border: 1px solid darkGray;
  background-color: snow;
  border-radius: 0.2em;
  padding: 0.2em;
  margin: 0.2ex 0;
}
li.project, li.technology {
  list-style: none;
  margin-bottom: 0.5rem;
}

h2 {
  margin: 0;
  padding: 0;
  display: inline;
  font-size: 1.5rem;
}
h3 {
  margin: 0 0.5rem 0 0;
  padding: 0;
  font-size: 1rem;
  font-weight: normal;
  width: 7rem;
  flex: 0 0 auto;
}
h3, .type {
  color: darkSlateGray;
  font-variant: small-caps;
  text-transform: lowercase;
  display: inline-block;
}
main .skill .type, main .technology .type {
  display: none;
}
.type::after {
  content: '';
  display: block;
}
.project a.url {
  text-decoration: initial;
  color: initial;
}
.screenshot {
  width: 10rem;
  margin: 0 1rem 0 0;
  float: left;
  border: 1px solid darkCyan;
}
section.skills {
  clear: both;
}

p {
  margin: 1.5ex 0;
  padding: 0;
}

ul.contributions, ul.contributions li {
  list-style: none;
  padding: 0;
}
ul.contributions {
  margin: 1ex 0;
}
.contributions li {
  margin: 0.5ex 0 0.5ex 1em;
  text-indent: -1em;
}
.contributions li::before {
  content: '*';
  display: inline-block;
  width: 1em;
  text-indent: 0;
  color: darkGray;
}

nav {
  box-shadow: 0 5px 5px -3px lightGray;
  z-index: 100;
  background-color: ivory;
}
.pages.names {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.pages > label {
  width: 10em;
  flex: 0 1 auto;
}
nav input[type="radio"] {
  display: none;
}
nav .label {
  display: inline-block;
  width: 100%;
  text-align: center;
  padding: 0.5ex 0;
}
nav :checked + .label {
  color: darkCyan;
  box-shadow: 0 5px 5px -4px darkCyan;
}

a, a:visited {
  text-decoration: none;
  color: darkSlateGray;
}
a, .clickable, main article.project {
  cursor: pointer;
  transition-property: color, border-color; background-color, box-shadow;
  transition-duration: 400ms;
  transition-timing-function: ease;
}
a:hover, .clickable:hover {
  background-color: lightSkyBlue;
  color: darkSlateGray;
  border-color: darkSlateGray;
}
main article.project:hover {
  background-color: aliceBlue;
}
a:hover, .clickable:hover {
}
li.clickable:hover, main article.project:hover {
  box-shadow: 0 0 1px darkCyan;
}
.photo {
  float: left;
  margin-right: 1em;
  border-radius: 1em;
}
@media (min-width: 80rem) {
  main article.project {
    width: calc(50% - 2rem);
  }
  main article.skill, main article.technology {
    width: calc(33% - 3rem);
  }
  section {
    display: flex;
    align-items: baseline;
  }
  section.skills {
    clear: none;
  }
  #popup {
    top: 50%;
    left: 50%;
    bottom: auto;
    right: auto;
    transform: translate(-50%, -50%);
    border: 1px solid darkCyan;
    padding: 2rem;
    max-width: calc(100% - 10em);
  }
  #popup.project {
    width: calc(100% - 4rem);
  }
  #popup .screenshot {
    display: block;
    width: auto;
    max-height: calc(100vh - 18ex);
  }
  #popup #close::before {
    content: 'X';
    left: -1rem;
  }
}

